# square_authentication_helper

./: .gitignore  CHANGELOG.md  README.md  example.py  pyproject.toml  setup.py
square_authentication_helper/: __init__.py  main.py  pydantic_models.py
tests/: test_main.py
