[build-system]
requires = ["uv-build"]
build-backend = "uv_build"

[project]
name = "square_authentication_helper"
version = "3.1.0"
description = "helper to access the authentication layer for my personal server."
readme = "README.md"
readme-content-type = "text/markdown"
requires-python = ">=3.12"
license = { text = "GPLv3" }
authors = [
    { name = "Parth Mukesh Mangtani", email = "thepmsquare@gmail.com" },
]
urls = { homepage = "https://github.com/thepmsquare/square_authentication_helper" }
keywords = ["authentication", "helper", "utilities"]
dependencies = [
    "square_commons>=2.0.0",
    "square_database_structure>=2.5.7",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

[tool.uv.build-backend]
module-name = "square_authentication_helper"
module-root = ""